OPTIONS added to result and updated swagger
